Funciones de los botones
Se agrego la función de abrir los activities a cada boton de el panel
principal

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="agregar">Agregar</string>
     <string name="modificar">Modificar</string>
     <string name="eliminar">Eliminar</string>
+    <string name="action_settings">action settings</string>
+    <string name="guardar">Guardar</string>
 </resources>
